--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -2,6 +2,12 @@ h1 {
 	padding-right: 100px;
 }
 
+.loader {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+}
+
 .tab {
         tab-size: 4;
     }
